public/css/styles.css
/* Variables */

:root {
	--clr-primary: #bf7160;
	--clr-primary-rgb: 191, 113, 96;
	--clr-secondary: #39c7d3;
	--clr-black: #353535;
	--clr-black-rgb: 53, 53, 53;
	--clr-light-gray: #f7fafc;
	--clr-light-gray-rgb: 247, 250, 252;
	--clr-gray: #dae8f1;
	--font-body: 'Lato', sans-serif;
	--font-mono: 'Roboto mono', monospace;
}

/* CSS Reset */

html {
	box-sizing: border-box;
	font-size: 18px;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

figure {
	margin: 1em 0 1em 0;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
	margin: 0;
	padding: 0;
}

img {
	max-width: 100%;
	height: auto;
}

img + p {
	margin-top: 1rem;
}

/* Typography */

body {
	font-family: var(--font-mono);
	font-weight: 400;
	color: var(--clr-black);
	letter-spacing: 0.3px;
	line-height: 1.65;
}

.content p,
.content li,
.content figcaption,
.content blockquote {
	font-family: var(--font-body);
}

p {
	font-size: 1em;
}

strong {
	font-weight: 700;
}

h1,
h2,
h3,
h4,
h5 {
	font-family: var(--font-mono);
	line-height: 1.2;
	font-weight: 400;
	margin-top: 1em;
	margin-bottom: 1em;
}

h1,
h2,
h3,
h4,
h5,
.h1,
.h2,
.h3,
.h4,
.h5,
button,
input,
footer,
label,
.toc {
	text-transform: lowercase;
}

h1,
h1.content,
.h1 {
	margin-top: 0;
	font-size: 2.074rem;
	word-spacing: -0.125em;
	letter-spacing: -1.5px;
	text-align: center;
}

h2,
.h2 {
	font-size: 1.728rem;
	font-weight: 700;
	word-spacing: -0.25em;
}

h3,
.h3 {
	font-size: 1.44rem;
}

h4,
.h4 {
	font-size: 1.2rem;
}

@media screen and (min-width: 768px) {
	h1,
	.h1 {
		font-size: 3.052rem;
	}
	h2,
	.h2 {
		font-size: 2.441rem;
	}
	h3,
	.h3 {
		font-size: 1.953rem;
	}
	h4,
	.h4 {
		font-size: 1.563rem;
	}
}

figcaption {
	font-size: 0.83em;
	text-align: center;
	font-style: italic;
}

small {
	font-size: 0.69em;
}

p,
ul,
ol {
	margin-bottom: 1rem;
}

ul,
ol {
	padding-left: 1rem;
}

/* Grid */

.page-narrow {
	padding-top: 2rem;
	padding-bottom: 2rem;
}

.page-narrow,
.container-sm,
.content {
	max-width: 768px;
	margin-left: auto;
	margin-right: auto;
}

.container-lg {
	max-width: 1140px;
	margin-left: auto;
	margin-right: auto;
}

.page-narrow,
.container-sm,
.container-lg {
	padding-left: 1rem;
	padding-right: 1rem;
}

.content {
	padding: 2rem 1rem;
}

@media screen and (min-width: 576px) {
	.content {
		padding-top: 2rem;
		padding-left: 3.5rem;
		padding-right: 3.5rem;
	}
}

/* Buttons and links */

a {
	color: var(--clr-primary);
	text-decoration: underline solid transparent;
	-webkit-text-decoration: underline solid transparent;
	transition: text-decoration 600ms ease;
	-webkit-transition: text-decoration 600ms ease;
}

a:hover,
.btn:hover {
	cursor: pointer;
}

a:hover,
a:focus {
	text-decoration: underline solid rgba(var(--clr-primary-rgb), 0.85);
	-webkit-text-decoration: underline solid rgba(var(--clr-primary-rgb), 0.85);
}

.btn {
	padding: 0.5em 1em;
	border-radius: 0.25em;
	margin-top: 1rem;
	margin-bottom: 1rem;
}

.btn-primary {
	color: white;
	background-color: var(--clr-primary);
	border: 1px solid var(--clr-primary);
	font-weight: 400;
}

.btn-primary a {
	font-weight: 400;
	color: white;
	text-decoration: none;
}

.btn-primary:hover,
.btn-primary:focus {
	background-color: rgba(var(--clr-primary-rgb), 0.85);
	border: 1px solid rgba(var(--clr-primary-rgb), 0.85);
}

.btn-primary a:hover,
.btn-primary a:focus {
	text-decoration: none;
}

/* Header and Footer */

.footer {
	text-align: center;
	padding: 3em 0;
	font-size: 0.8em;
}

/* navigation  */

header {
	text-align: center;
	width: 100%;
	height: 80px;
	position: relative;
	display: flex;
	justify-content: center;
	align-items: center;
}
.nav-toggle {
	display: none;
}
.nav-toggle-label {
	position: absolute;
	top: 0;
	left: 0;
	margin-left: 1rem;
	height: 100%;
	display: flex;
	align-items: center;
}
.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
	display: block;
	background: var(--clr-black);
	width: 2em;
	height: 2px;
	border-radius: 2px;
	display: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
	content: '';
	position: absolute;
}

.nav-toggle-label span::before {
	bottom: 50px;
}

.nav-toggle-label span::after {
	top: 50px;
}

.site-brand {
	margin: 0;
	padding: 0;
	display: flex;
	align-items: center;
}

.site-brand a {
	color: var(--clr-black);
	text-decoration: none;
}

.site-brand a:hover,
.site-brand a:focus {
	text-decoration: none;
}

.site-logo {
	margin-right: 1rem;
}

nav {
	position: absolute;
	text-align: center;
	top: 100%;
	left: 0;
	background-color: rgba(var(--clr-light-gray-rgb), 0.97);
	width: 100%;

	height: 100vh;
	transform: scale(1, 0);
	transform-origin: top;
	transition: transform 400ms ease-in-out;
}

nav ul {
	margin: 0;
	padding: 0;
	list-style: none;
	word-spacing: -0.125rem;
}

nav li {
	margin-bottom: 1em;
}

nav a {
	color: rgba(var(--clr-black-rgb), 0.65);
	opacity: 0;
	transition: opacity 150ms ease-in-out;
}

nav a:hover,
nav a:focus {
	color: rgba(var(--clr-primary-rgb), 0.85);
}

.nav-toggle:checked ~ nav {
	transform: scale(1, 1);
}

.nav-toggle:checked ~ nav a {
	opacity: 1;
	transition: opacity 250ms ease-in-out 250ms;
}

@media screen and (min-width: 768px) {
	.nav-toggle-label {
		display: none;
	}
	header {
		display: flex;
		justify-content: space-between;
		height: 120px;
		padding-left: max(calc((100vw - 1140px) / 2 + 2em), 3rem);
		padding-right: max(calc((100vw - 1140px) / 2 + 2em), 3rem);
	}

	nav {
		all: unset;
		display: flex;
		justify-content: flex-end;
		align-items: center;
	}
	nav ul {
		display: flex;
	}
	nav li {
		margin-left: 1em;
		margin-bottom: 0;
	}
	nav a {
		opacity: 1;
	}
}

/* Components */

section {
	margin-top: 3em;
}

.section-title {
	margin-top: 0;
}

input,
textarea {
	width: 100%;
	padding: 0.25em 0.5em;
	border-radius: 0.25em;
	border: 1px solid var(--clr-gray);
}

textarea {
	aspect-ratio: 3/1;
	resize: none;
}

.article-snippet {
	display: grid;
	grid-template-columns: 1fr;
	gap: 0.25rem;
	margin-bottom: 2em;
}

.article-snippet h4 {
	margin: 0;
	font-size: 1.25rem;
}

@media screen and (min-width: 768px) {
	.article-snippet {
		grid-template-columns: 1fr 1fr;
	}

	.article-img-wrapper {
		display: flex;
	}

	.article-img {
		height: 100%;
		object-fit: cover;
	}
	.article-snippet {
		gap: 1rem;
		margin-bottom: 1.5em;
	}
}

.newsletter-signup {
	background-color: white;
	border: 1px solid var(--clr-gray);
	padding: 1.75rem;
}

.well,
.toc {
	padding: 1rem 0.5rem;
	background-color: rgba(var(--clr-light-gray-rgb), 0.5);
	border: 1px solid var(--clr-gray);
}

.toc {
	padding: 1rem 1.5rem;
	margin-bottom: 1.5rem;
}

.toc__title {
	font-weight: bold;
}

.toc ul {
	list-style: none;
	padding-left: 0;
}

/* Helpers */

.list-style-none {
	list-style: none;
	padding-left: 0;
}

.text-center {
	text-align: center;
}

/* Hero styles */

.section--hero {
	margin-top: 0;
	display: grid;
	grid-template-columns: 1fr;
	padding-left: calc((100vw - 1140px) / 2);
	padding-right: calc((100vw - 1140px) / 2);
	min-height: min(70vh, 700px);
	background-color: var(--clr-secondary);
	align-items: center;
}

.section--hero .column-left {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;
	padding: 3rem;
}

.section--hero .column-right {
	position: relative;
	display: none;
	height: 100%;
	overflow: auto;
}

.hero__img {
	position: absolute;
	bottom: 0;
	height: 550px;
	object-fit: cover;
	left: 50%;
	transform: translatex(-50%);
}

.hero__title {
	color: white;
	font-size: 2.5rem;
	margin-bottom: 1.5rem;
	margin-top: 0;
}

.hero__lead {
	margin-bottom: 2rem;
}

.hero__form {
	width: 100%;
	display: flex;
	flex-direction: column;
}

.hero__form input {
	width: 100%;
	padding: 0.5em 0.75em;
	margin-bottom: 1rem;
}

.hero__form button {
	margin: 0;
	padding: 0.6em 0.75em;
}

@media screen and (min-width: 1092px) {
	.hero__title {
		font-size: 4.2rem;
	}
}

@media screen and (min-width: 768px) {
	.section--hero {
		grid-template-columns: 1fr 1fr;
		min-height: min(80vh, 700px);
	}

	.section--hero .column-right {
		display: flex;
	}
	.section--hero .column-left {
		text-align: inherit;
	}

	.hero__title {
		font-size: 2.6rem;
	}
	.hero__lead {
		font-size: 1.39rem;
	}
}

@media screen and (min-width: 944px) {
	.hero__title {
		font-size: 3.4rem;
	}
	.hero__form {
		flex-direction: row;
		white-space: nowrap;
	}
	.hero__form input {
		width: 250px;
		margin-bottom: 0;
		margin-right: 0.5em;
	}

	.hero__form input {
		width: 300px;
	}
}

@media screen and (min-width: 1094px) {
	.hero__title {
		font-size: 4.209rem;
	}
}

